<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chips="http://schemas.android.com/apk/res/de.pecheur.chips"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

	    <de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_one_hint" />
	    
		<de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_two_hint" />
		
		<de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_three_hint" />
		
		<de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_four_hint" />
		
		<de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_five_hint" />
		
		<de.pecheur.chips.ChipEditTextView
	        android:id="@+id/chipView6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/sample_six_hint"/>

		
	    
	     <Button
	         android:id="@+id/publish"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/publish" />
	
	</LinearLayout>
    
</ScrollView>